Fixed spacing for all sizes

--- a/_sass/_c.scss
+++ b/_sass/_c.scss
@@ -209,7 +209,7 @@
   font-style: normal;
   font-weight: bold;
   font-display: fallback;
-  src: local('Source Sans Pro Black'), local('SourceSansPro-Black'),
-       url('/fonts/source-sans-pro-v11-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('/fonts/source-sans-pro-v11-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'),
+       url('/fonts/source-sans-pro-v11-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('/fonts/source-sans-pro-v11-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
